SERVER-48335 Indexes rebuilt via rollback-via-refetch should not retry skipped records